# hacaton_api

./: .env_example  .flake8  .gitignore  .pre-commit-config.yaml  main.py  main_release.py  pyproject.toml
api/: apps.py  authentication.py  constants.py  meshnode.py  middleware.py  urls.py
api/serializers/: alarm_settings.py  alarms.py  default_settings.py  map.py
api/tasks/: __init__.py  alarms.py
api/views/: alarms.py  default_settings.py  map.py  subscribers.py  test.py  user.py
conf/: urls.py
conf/settings/: __init__.py  database.py  django.py  logger.py  rest_framework.py  swagger.py
models_app/migrations/: 0001_initial.py  0002_alarm_defaultalarmconf_useralarmconf_alter_user_code.py  0003_alter_alarm_magnetic_alter_alarm_scatter_area_and_more.py  0004_alter_alarm_grade_alter_alarm_other_user_grade_and_more.py  0005_alarm_latitude_alarm_longitude_alter_user_code.py  0006_alarm_ai_processed_user_ai_analyse_enabled_and_more.py  0007_alter_user_code.py
models_app/models/: __init__.py
models_app/models/alarm/: models.py  signals.py
models_app/models/default_alarm_conf/: models.py
models_app/models/user/: models.py
models_app/models/user_alarm_conf/: models.py
utils/: pagintion.py
